WIP: use DHCP with strongswan to assign unique IPs
- Improve IP address allocation
    - Use the .1 address as the local_service_ip
      This makes split tunneling simpler - no need to also tunnel
      the former local service IP of 172.16.0.1
    - Allocate the .50-.150 addresses for the DHCP range by default
- Add the asn1crypto module, (prereq for x509_common_name_hex filter)
- Add TODO about duplicate sourcing in /etc/network/interfaces
- Set a DHCP range in dnsmasq.conf
- Set dhcp-host entries in dnsmasq.conf including DHCP host IDs
- Fix the listen-address config for dnsmasq
- Add dnsmasq.leases to its apparmor config
- Add the dhcp plugin to strongswan, and configure it
- Generate all certs with the VPN domain appended...
  rather than /CN=user, generate with /CN=user.algo.local
- TEMP: disable cert revocation. Broken for now.
- Remove per-client conn stanzas from ipsec.conf
- Add new x509_common_name_hex jinga2 filter
- Add a notes.md file to track my notes

--- a/roles/dns_adblocking/templates/dnsmasq.conf.j2
+++ b/roles/dns_adblocking/templates/dnsmasq.conf.j2
@@ -4,6 +4,13 @@
 # as the long options legal on the command line. See
 # "/usr/sbin/dnsmasq --help" or "man 8 dnsmasq" for details.
 
+#dhcp-range={{ vpn_network | ipaddr(50) | ipaddr('address') }}
+dhcp-range={{ vpn_network | ipaddr(vpn_network_dhcp_min) | ipaddr('address') }},{{ vpn_network | ipaddr(vpn_network_dhcp_max) | ipaddr('address') }},12h
+
+{% for user in users %}
+dhcp-host=id:{{ "{}.{}".format(user, vpn_network) | x509_common_name_hex }},{{ vpn_network | ipaddr(loop.index + vpn_network_dhcp_min) | ipaddr('address') }},{{ user }}.{{ vpn_domain }}
+{% endfor %}
+
 # Listen on this specific port instead of the standard DNS port
 # (53). Setting this to zero completely disables DNS function,
 # leaving only DHCP and/or TFTP.
@@ -111,7 +118,9 @@ group=nogroup
 #except-interface=
 # Or which to listen on by address (remember to include 127.0.0.1 if
 # you use this.)
-listen-address=127.0.0.1,FCAA::1,{{ local_service_ip }}
+listen-address=127.0.0.1
+listen-address=FCAA::1
+listen-address={{ local_service_ip }}
 # If you want dnsmasq to provide only DNS service on an interface,
 # configure it as shown above, and then use the following line to
 # disable DHCP and TFTP on it.
