--- a/roles/vpn/templates/ipsec.conf.j2
+++ b/roles/vpn/templates/ipsec.conf.j2
@@ -27,6 +27,8 @@ conn %default
 
     right=%any
     rightauth=pubkey
+    #rightsourceip={{ vpn_network }},{{ vpn_network_ipv6 }}
+    rightsourceip=%dhcp
 
 {% if local_dns is defined and local_dns == "Y" %}
     rightdns={{ local_service_ip }}
@@ -34,14 +36,6 @@ conn %default
     rightdns={% for host in dns_servers.ipv4 %}{{ host }}{% if not loop.last %},{% endif %}{% endfor %}{% if ipv6_support is defined and ipv6_support == "yes" %},{% for host in dns_servers.ipv6 %}{{ host }}{% if not loop.last %},{% endif %}{% endfor %}{% endif %}
 {% endif %}
 
-# Client configs
-# example: https://www.strongswan.org/testing/testresults/ikev2/config-payload/, especially moon.ipsec.conf
 
-{% for user in users %}
-
-conn AlgoUser-{{ user }}
-    rightid={{ user }}
-    rightsourceip={{ vpn_network | ipaddr(loop.index) | ipaddr('address') }}
+conn ikev2-pubkey
     auto=add
-
-{% endfor %}
