Improve dns_route53 role
- Take in zone ID as parameter
- Remove generated CFN template so it doesn’t clutter the configs dir
  or cause mismatched diffs between the that and the encrypted archive

--- a/roles/dns_route53/templates/stack.yml.j2
+++ b/roles/dns_route53/templates/stack.yml.j2
@@ -11,19 +11,19 @@ Description: {{ route53_stack_name }} VPN records
 # 2.    Note the trailing dots
 #       Route53 requires trailing dots for hostnames
 
-Resources:
+Parameters:
 
-  NewtroyZone:
-    Type: AWS::Route53::HostedZone
-    Properties:
-      # Note trailing dot
-      Name: {{ vpn_domain }}.
+  NewTroyZone:
+    Type: String
+    Description: The ID for the zone to add these records to
+
+Resources:
 
   NewtroyZoneRecords:
     Type: AWS::Route53::RecordSetGroup
 
     Properties:
-      HostedZoneId: !Ref NewtroyZone
+      HostedZoneId: !Ref NewTroyZone
       RecordSets:
 
         - Name: {{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}.
