--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -96,11 +96,11 @@
                 <key>CertificateType</key>
                 <string>ECDSA256</string>
                 <key>ServerCertificateIssuerCommonName</key>
-                <string>{{ IP_subject_alt_name }}</string>
+                <string>{{ newtroy_server_cert_common_name }}</string>
                 <key>RemoteAddress</key>
-                <string>{{ IP_subject_alt_name }}</string>
+                <string>{{ newtroy_server_cert_common_name }}</string>
                 <key>RemoteIdentifier</key>
-                <string>{{ IP_subject_alt_name }}</string>
+                <string>{{ newtroy_server_cert_common_name }}</string>
                 <key>UseConfigurationAttributeInternalIPSubnet</key>
                 <integer>0</integer>
             </dict>
@@ -129,7 +129,7 @@
                 <integer>0</integer>
             </dict>
             <key>UserDefinedName</key>
-            <string>Algo VPN {{ IP_subject_alt_name }} IKEv2</string>
+            <string>Algo VPN {{ newtroy_server_cert_common_name }} IKEv2</string>
             <key>VPNType</key>
             <string>IKEv2</string>
         </dict>
@@ -163,7 +163,7 @@
             <key>PayloadDescription</key>
             <string>Adds a CA root certificate</string>
             <key>PayloadDisplayName</key>
-            <string>{{ IP_subject_alt_name }}</string>
+            <string>{{ newtroy_server_cert_common_name }}</string>
             <key>PayloadIdentifier</key>
             <string>com.apple.security.root.{{ CA_PayloadIdentifier }}</string>
             <key>PayloadType</key>
@@ -175,7 +175,7 @@
         </dict>
     </array>
     <key>PayloadDisplayName</key>
-    <string>{{ IP_subject_alt_name }} IKEv2</string>
+    <string>{{ newtroy_server_cert_common_name }} IKEv2</string>
     <key>PayloadIdentifier</key>
     <string>donut.local.{{ 'MobileConfig_PayloadIdentifier' + item.0 | newtroy_nbuuid(newtroy_this_server_namespace) }}</string>
     <key>PayloadRemovalDisallowed</key>
