--- a/roles/vpn/templates/sswan.j2
+++ b/roles/vpn/templates/sswan.j2
@@ -1,9 +1,9 @@
 {
     "uuid": "{{ item.0 | newtroy_nbuuid(newtroy_this_server_namespace) }}",
-    "name": "Algo {{ IP_subject_alt_name }}",
+    "name": "Algo {{ newtroy_server_cert_common_name }}",
     "type": "ikev2-cert",
     "remote": {
-        "addr": "{{ IP_subject_alt_name }}",
+        "addr": "{{ newtroy_server_cert_common_name }}",
         "cert": "{{ PayloadContentCA }}"
     },
     "local": {
