Allow defining just a VPN server hostname
- Allow defining a VPN server hostname, like algo.example.com
- Break out the client DNS stuff, so that clients can be assigned
  subdomains on a separate domain, like client1.internal.example.com

--- a/roles/dns_vpnclients_route53/templates/stack.yml.j2
+++ b/roles/dns_vpnclients_route53/templates/stack.yml.j2
@@ -26,21 +26,15 @@ Resources:
       HostedZoneId: !Ref NewTroyZone
       RecordSets:
 
-        - Name: {{ newtroy_vpn_server_hostname }}.{{ vpn_domain }}.
-          Type: A
-          TTL: 300
-          ResourceRecords:
-            - {{ vpn_host_ip }}
-
 {%for user in users %}
 
-        - Name: {{ user }}.{{ vpn_domain }}.
+        - Name: {{ user }}.{{ newtroy_vpn_internal_domain }}.
           Type: A
           TTL: 300
           ResourceRecords:
             - {{ vpn_network | ipaddr(loop.index + 1) | ipaddr('address') }}
 
-        - Name: {{ user }}.{{ vpn_domain }}.
+        - Name: {{ user }}.{{ newtroy_vpn_internal_domain }}.
           Type: AAAA
           TTL: 300
           ResourceRecords:
