--- a/roles/dns_adblocking/templates/etc.hosts.ipsecclients.j2
+++ b/roles/dns_adblocking/templates/etc.hosts.ipsecclients.j2
@@ -1,3 +1,3 @@
 {% for user in users %}
-{{ vpn_network | ipaddr(loop.index) | ipaddr('address') }} {{ user }}.{{ vpn_domain }}
+{{ vpn_network | ipaddr(loop.index) | ipaddr('address') }} {{ user }}.{{ newtroy_vpn_internal_domain }}
 {% endfor %}
