--- a/roles/dns_vpnclients_route53/templates/stack.yml.j2
+++ b/roles/dns_vpnclients_route53/templates/stack.yml.j2
@@ -26,18 +26,24 @@ Resources:
       HostedZoneId: !Ref NewTroyZone
       RecordSets:
 
+        - Name: {{ newtroy_vpn_server_hostname }}.{{ newtroy_vpn_internal_domain }}.
+          Type: A
+          TTL: 300
+          ResourceRecords:
+            - {{ local_service_ip }}
+
 {%for user in users %}
 
         - Name: {{ user }}.{{ newtroy_vpn_internal_domain }}.
           Type: A
           TTL: 300
           ResourceRecords:
-            - {{ vpn_network | ipaddr(loop.index + 1) | ipaddr('address') }}
+            - {{ vpn_network | ipaddr(loop.index + newtroy_network_client_offset) | ipaddr('address') }}
 
         - Name: {{ user }}.{{ newtroy_vpn_internal_domain }}.
           Type: AAAA
           TTL: 300
           ResourceRecords:
-            - {{ vpn_network_ipv6 | ipaddr(loop.index + 1) | ipaddr('address') }}
+            - {{ vpn_network_ipv6 | ipaddr(loop.index + newtroy_network_client_offset) | ipaddr('address') }}
 
 {%endfor%}
