--- a/roles/vpn/templates/ipsec.conf.j2
+++ b/roles/vpn/templates/ipsec.conf.j2
@@ -42,11 +42,11 @@ conn %default
 
 conn AlgoUser-{{ user }}
     rightid={{ user }}
-    rightsourceip={{ vpn_network | ipaddr(loop.index) | ipaddr('address') }}
+    rightsourceip={{ vpn_network | ipaddr(loop.index + newtroy_network_client_offset) | ipaddr('address') }}
     auto=add
 conn AlgoUser-CN{{ user }}
     rightid="/CN={{ user }}"
-    rightsourceip={{ vpn_network | ipaddr(loop.index) | ipaddr('address') }}
+    rightsourceip={{ vpn_network | ipaddr(loop.index + newtroy_network_client_offset) | ipaddr('address') }}
     auto=add
 
 {% endfor %}
