--- a/roles/dns_adblocking/templates/usr.sbin.dnsmasq.j2
+++ b/roles/dns_adblocking/templates/usr.sbin.dnsmasq.j2
@@ -17,6 +17,7 @@
   /var/lib/dnsmasq/block.hosts r,
   /etc/dnsmasq.d-available/ r,
   /etc/dnsmasq.d-available/* r,
+  /etc/hosts.ipsecclients r,
 
   /usr/sbin/dnsmasq mr,
 
