Revert "Initial, untested: merge upstream<-newtroy"
This reverts commit 242985c8dd931273b1e4791f24e25166b7fc92f6.

Will try again without newtroy_server_configs and
newtroy_vpn_server_hostname everywhere

--- a/roles/ssh_tunneling/templates/ssh_config.j2
+++ b/roles/ssh_tunneling/templates/ssh_config.j2
@@ -4,4 +4,4 @@ Host algo
   Compression yes
   IdentityFile {{ item }}.ssh.pem
   User {{ item }}
-  Hostname {{ newtroy_server_cert_common_name }}
+  Hostname {{ IP_subject_alt_name }}
