--- a/roles/vpn/templates/mobileconfig.j2
+++ b/roles/vpn/templates/mobileconfig.j2
@@ -183,7 +183,7 @@
     <key>PayloadDisplayName</key>
     <string>{{ IP_subject_alt_name }} IKEv2</string>
     <key>PayloadIdentifier</key>
-    <string>donut.local.{{ 500000 | random | to_uuid | upper }}</string>
+    <string>donut.local.{{ 'MobileConfig_PayloadIdentifier' + item.0 | newtroy_nbuuid(newtroy_this_server_namespace) }}</string>
     <key>PayloadOrganization</key>
 	<string>Algo VPN</string>
     <key>PayloadRemovalDisallowed</key>
@@ -191,7 +191,7 @@
     <key>PayloadType</key>
     <string>Configuration</string>
     <key>PayloadUUID</key>
-    <string>{{ 400000 | random | to_uuid | upper }}</string>
+    <string>{{ 'MobileConfig_PayloadUUID' + item.0 | newtroy_nbuuid(newtroy_this_server_namespace) }}</string>
     <key>PayloadVersion</key>
     <integer>1</integer>
 </dict>
