Fix more IP_subject_alt_name, use venvs var

--- a/roles/ssh_tunneling/templates/ssh_config.j2
+++ b/roles/ssh_tunneling/templates/ssh_config.j2
@@ -4,4 +4,4 @@ Host algo
   Compression yes
   IdentityFile {{ item }}.ssh.pem
   User {{ item }}
-  Hostname {{ IP_subject_alt_name }}
+  Hostname {{ newtroy_vpn_server_fqdn }}
