--- a/roles/vpn/templates/ipsec.conf.j2
+++ b/roles/vpn/templates/ipsec.conf.j2
@@ -20,8 +20,8 @@ conn %default
 
     left=%any
     leftauth=pubkey
-    leftid={{ IP_subject_alt_name }}
-    leftcert={{ IP_subject_alt_name }}.crt
+    leftid={{ newtroy_vpn_server_fqdn }}
+    leftcert={{ newtroy_vpn_server_fqdn }}.crt
     leftsendcert=always
     leftsubnet=0.0.0.0/0,::/0
 
