Fix bugs related to addtl zone records

--- a/roles/dns_vpn_internal_network_route53/templates/stack.yml.j2
+++ b/roles/dns_vpn_internal_network_route53/templates/stack.yml.j2
@@ -49,9 +49,10 @@ Resources:
 {%endfor%}
 
 {% for record in newtroy_vpn_internal_hosted_zone_additional_records %}
+
         - Name: {{ record.Name }}
-	  Type: {{ record.Type }}
+          Type: {{ record.Type }}
           TTL: {{ record.TTL }}
-          ResourceRecords: {{ record.ResourceRecords }}
+          ResourceRecords: ["{{ record.ResourceRecords | list | join('","') }}"]
 
 {% endfor %}
